# whatshap-wmec-solver

./: mypy.ini  pyproject.toml
.github/workflows/: run_pytest.yml  type_check_with_mypy.yml
dev/: requirements.txt
src/whatshap_wmec_solver/: __init__.py  whatshap_wmec_solver.py
tests/: integration_test.py  unit_test.py
